--- a/bsconfig.json
+++ b/bsconfig.json
@@ -21,10 +21,9 @@
   "namespace": true,
   "bs-dependencies": [
     "reason-react",
-    "reason-apollo"
+    "reason-apollo",
+    "reason-apollo-hooks"
   ],
-  "ppx-flags": [
-    "@baransu/graphql_ppx_re/ppx6"
-  ],
+  "ppx-flags": ["@baransu/graphql_ppx_re/ppx"],
   "refmt": 3
 }
