--- a/package.json
+++ b/package.json
@@ -17,15 +17,17 @@
   "author": "Flavio Corpa <flavio.corpa@47deg.com>",
   "license": "MIT",
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
     "graphql-to-json-converter": "^1.2.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "reason-apollo-hooks": "git@github.com:tcoopman/reason-apollo-hooks.git#compatible_with_removing_type_annotations_from_reason_apollo",
     "reason-react": ">=0.7.0"
   },
   "devDependencies": {
     "@baransu/graphql_ppx_re": "^0.7.1",
     "bs-platform": "^7.0.0",
     "moduleserve": "^0.9.0",
-    "reason-apollo": "^0.18.0"
+    "reason-apollo": "git://github.com/yawaramin/reason-apollo#bugfix/226-option-annotation"
   }
 }
