Hide compiled files in vscode 🙅🏼‍♀️

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -17,7 +17,7 @@
       "in-source": true
     }
   ],
-  "suffix": ".bs.js",
+  "suffix": ".js",
   "namespace": true,
   "bs-dependencies": [
     "reason-react",
