--- a/package.json
+++ b/package.json
@@ -28,6 +28,6 @@
     "@baransu/graphql_ppx_re": "^0.7.1",
     "bs-platform": "^7.0.0",
     "moduleserve": "^0.9.0",
-    "reason-apollo": "git://github.com/yawaramin/reason-apollo#bugfix/226-option-annotation"
+    "reason-apollo": "^0.19.0"
   }
 }
