--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "graphql-to-json-converter": "^1.2.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "reason-apollo": "^0.19.0",
     "reason-apollo-hooks": "git://github.com:tcoopman/reason-apollo-hooks#compatible_with_removing_type_annotations_from_reason_apollo",
     "reason-react": ">=0.7.0"
   },
   "devDependencies": {
     "@baransu/graphql_ppx_re": "^0.7.1",
     "bs-platform": "^7.0.0",
-    "moduleserve": "^0.9.0",
-    "reason-apollo": "^0.19.0"
+    "moduleserve": "^0.9.0"
   }
 }
